--- a/ARGO/ARGO.vcxproj.filters
+++ b/ARGO/ARGO.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="GameOver.cpp">
       <Filter>src\Screens</Filter>
     </ClCompile>
+    <ClCompile Include="Options.cpp">
+      <Filter>src\Screens</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -235,6 +238,9 @@
       <Filter>Header\Screens</Filter>
     </ClInclude>
     <ClInclude Include="Credits.h">
+      <Filter>Header\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="Options.h">
       <Filter>Header\Screens</Filter>
     </ClInclude>
   </ItemGroup>
