--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -197,7 +197,7 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>xcopy /y /e "$(OneDrive)" "$(SolutionDir)/assets"
+      <Command>xcopy /y /e "$(OneDrive)" "$(SolutionDir)ARGO/assets"
 </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
