--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -169,20 +169,20 @@
     <LibraryPath>C:\SDL2\lib;$(LibraryPath)</LibraryPath>
     <IncludePath>C:\SDL2_image-2.0.3\include;C:\SDL2-2.0.8\include;TMX_Lite\include;$(IncludePath)</IncludePath>
     <LibraryPath>TMX_Lite\lib;C:\SDL2-2.0.8\lib\x86;$(LibraryPath)</LibraryPath>
-    <IncludePath>TMX_Lite\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
-    <LibraryPath>TMX_Lite\lib;TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>SDL2\include;TMX_Lite\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
+    <LibraryPath>SDL2\lib\x86;TMX_Lite\lib;TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
-    <LibraryPath>TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>SDL2\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
+    <LibraryPath>SDL2\lib\x86;TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;C:\SDL2_mixer\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
-    <LibraryPath>TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>SDL2\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;C:\SDL2_mixer\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
+    <LibraryPath>SDL2\lib\x86;TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
-    <LibraryPath>TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>SDL2\include;TMX_Lite\include;$(SDL_MIX_SDK)include;$(SDL_IMG_SDK)include;$(SDL_SDK)include;C:\SDL2\include;$(IncludePath);C:\SDL\SDL2_2.0.8\include;C:\SDL\SDL2_Image_2.0.3\include;C:\SDL\SDL2_Mixer_2.0.4\include</IncludePath>
+    <LibraryPath>SDL2\lib\x86;TMX_Lite\lib;$(SDL_MIX_SDK)lib\x86;$(SDL_IMG_SDK)lib\x86;$(SDL_SDK)lib\x86;C:\SDL2\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -190,14 +190,14 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>TMX_Lite\include;TMX_Lite\include;C:\SDL2_image-2.0.3;C:\SDL2-2.0.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SDL2\include;TMX_Lite\include;TMX_Lite\include;C:\SDL2_image-2.0.3;C:\SDL2-2.0.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\SDL2_image-2.0.3\lib\x86;C:\SDL2_mixer\lib\x86;C:\SDL2\lib\x86;TMX_Lite\lib\libtmxlite-s-d.lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalIncludeDirectories>%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </Link>
     <Link>
-      <AdditionalLibraryDirectories>TMX_Lite\lib;TMX_Lite\lib\libtmxlite-s-d.lib;%(SDL_SDK)lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>SDL2\lib\x86;TMX_Lite\lib;TMX_Lite\lib\libtmxlite-s-d.lib;%(SDL_SDK)lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -216,10 +216,10 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>TMX_Lite\include;%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SDL2\include;TMX_Lite\include;%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>TMX_Lite\lib;%(SDL_SDK)lib\x86;C:\SDL2_mixer\lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>SDL2\lib\x86;TMX_Lite\lib;%(SDL_SDK)lib\x86;C:\SDL2_mixer\lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2_mixer.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -236,12 +236,12 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>TMX_Lite\include;%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SDL2\include;TMX_Lite\include;%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>TMX_Lite\lib;%(SDL_SDK)lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>SDL2\lib\x86;TMX_Lite\lib;%(SDL_SDK)lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -258,12 +258,12 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>TMX_Lite\include;%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>SDL2\include;TMX_Lite\include;%(SDL_SDK)include;%(SDL_IMG_SDK)include;%(SDL_MIX_SDK)include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>TMX_Lite\lib;%(SDL_SDK)lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>SDL2\lib\x86;TMX_Lite\lib;%(SDL_SDK)lib\x86;%(SDL_IMG_SDK)lib\x86;%(SDL_MIX_SDK)lib\x86;C:\SDL2\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
