Added controllers to switch between ai and player control

--- a/ARGO/ARGO.vcxproj
+++ b/ARGO/ARGO.vcxproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIComponent.h" />
+    <ClInclude Include="AiTakeOverCommand.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="Credits.h" />
     <ClInclude Include="BombCommand.h" />
