--- a/ARGO/ARGO.vcxproj.filters
+++ b/ARGO/ARGO.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClInclude Include="BombCommand.h">
       <Filter>Header\Command</Filter>
     </ClInclude>
+    <ClInclude Include="AiTakeOverCommand.h">
+      <Filter>Header\Command</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Left.bmp" />
